Updating Our Details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Learning to be a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Green Brook, New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Going on Hikes, Working on Graphic Desing, Gaming</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To become a full stack web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in South Orange, New Jersey</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's the career that best suits my interests and I enjoy it</p>
     </section>
 
     <footer id="footer">
