Redoing Updating Our Details

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <h1>Where I'm From</h1>
       <p>Green Brook, New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Going on Hikes, Working on Graphic Desing, Gaming</p>
+      <p>Going on Hikes, Working on Graphic Design, Gaming</p>
       <h1>What's your dream job?</h1>
-      <p>To become a full stack web developer</p>
+      <p>To Become A Full Stack Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>I live in South Orange, New Jersey</p>
+      <p>I Live In South Orange, New Jersey</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>It's the career that best suits my interests and I enjoy it</p>
     </section>
